Bug 740167: Specialize binary arith when operands rands coerce to double, r=dvander