js/src/ion/MIR.cpp
@@ -794,32 +794,61 @@ MMul::analyzeRange()
 }
 
 void
-MBinaryArithInstruction::infer(const TypeOracle::Binary &b)
+MBinaryArithInstruction::infer(JSContext *cx, const TypeOracle::BinaryTypes &b)
 {
+    // Retrieve type information of lhs and rhs
+    // Rhs is defaulted to int32 first, 
+    // because in some cases there is no rhs type information
+    MIRType lhs = MIRTypeFromValueType(b.lhsTypes->getKnownTypeTag(cx));
+    MIRType rhs = MIRType_Int32;
+
+    // Test if types coerces to doubles
+    bool lhsCoerces = b.lhsTypes->knownNonStringPrimitive(cx);
+    bool rhsCoerces = true;
+
+    // Use type information provided by oracle if available.
+    if (b.rhsTypes) {
+        rhs = MIRTypeFromValueType(b.rhsTypes->getKnownTypeTag(cx));
+        rhsCoerces = b.rhsTypes->knownNonStringPrimitive(cx);
+    }
+
+    MIRType rval = MIRTypeFromValueType(b.outTypes->getKnownTypeTag(cx));
+
     // Anything complex - strings and objects - are not specialized.
-    if (b.lhs >= MIRType_String || b.rhs >= MIRType_String) {
+    if (!lhsCoerces || !rhsCoerces) {
         specialization_ = MIRType_None;
         return;
     }
 
+    JS_ASSERT(lhs < MIRType_String || lhs == MIRType_Value);
+    JS_ASSERT(rhs < MIRType_String || rhs == MIRType_Value);
+
+    // Don't specialize values when result isn't double
+    if (lhs == MIRType_Value || rhs == MIRType_Value) {
+        if (rval != MIRType_Double) {
+            specialization_ = MIRType_None;
+            return;
+        }
+    }
+
     // Don't specialize mod with double result (bug 716694).
-    if (isMod() && b.rval == MIRType_Double) {
+    if (isMod() && rval == MIRType_Double) {
         specialization_ = MIRType_None;
         return;
     }
 
     // Don't specialize as int32 if one of the operands is undefined,
     // since ToNumber(undefined) is NaN.
-    if (b.rval == MIRType_Int32 && (b.lhs == MIRType_Undefined || b.rhs == MIRType_Undefined)) {
+    if (rval == MIRType_Int32 && (lhs == MIRType_Undefined || rhs == MIRType_Undefined)) {
         specialization_ = MIRType_None;
         return;
     }
 
-    JS_ASSERT(b.rval == MIRType_Int32 || b.rval == MIRType_Double);
-    specialization_ = b.rval;
+    JS_ASSERT(rval == MIRType_Int32 || rval == MIRType_Double);
+    specialization_ = rval;
 
     setCommutative();
-    setResultType(b.rval);
+    setResultType(rval);
 }
 
 void
